--- a/Home.html
+++ b/Home.html
@@ -35,7 +35,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-align-center-xs u-clearfix u-header u-header" id="sec-9afa"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-align-center-xs u-clearfix u-header u-header" id="sec-9afa"><div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-align-left u-headline u-text u-text-1">
           <a href="/">bsc mühendislik</a>
         </h3>
